--- a/module-0/basics.ipynb
+++ b/module-0/basics.ipynb
@@ -68,16 +68,16 @@
    "source": [
     "import os, getpass\n",
     "\n",
-    "# Defina todas as variáveis de ambiente necessárias para o Azure OpenAI\n",
-    "# Use getpass para a chave de API e defina as demais diretamente\n",
+    "# definir variáveis de ambiente necessárias para o Azure OpenAI\n",
+    "# use getpass para a chave de API e definir as demais diretamente\n",
     "os.environ[\"OPENAI_API_KEY\"] = getpass.getpass(\"OPENAI_API_KEY: \")\n",
     "os.environ[\"OPENAI_API_VERSION\"] = \"2024-12-01-preview\"\n",
     "os.environ[\"ENDPOINT\"] = \"https://cog-open-ai-lab.openai.azure.com/\"\n",
     "os.environ[\"MODEL_DEPLOYMENT\"] = \"gpt-4o\"\n",
     "os.environ[\"MODEL_NAME\"] = \"gpt-4o\"\n",
     "\n",
-    "# Nota: As variáveis OPENAI_API_KEY, ENDPOINT, MODEL_DEPLOYMENT e OPENAI_API_VERSION\n",
-    "# são essenciais para o funcionamento do AzureChatOpenAI."
+    "# nota: as variáveis OPENAI_API_KEY, ENDPOINT, MODEL_DEPLOYMENT e OPENAI_API_VERSION\n",
+    "# são essenciais para o funcionamento do AzureChatOpenAI"
    ]
   },
   {
@@ -105,7 +105,7 @@
     "from langchain_openai import AzureChatOpenAI\n",
     "import os\n",
     "\n",
-    "# Inicializa o modelo usando sua configuração completa do Azure\n",
+    "# inicializa o modelo usando configuração completa do Azure\n",
     "gpt4o_chat = AzureChatOpenAI(\n",
     "    openai_api_version=os.getenv('OPENAI_API_VERSION'),\n",
     "    azure_endpoint=os.getenv('ENDPOINT'),\n",
@@ -114,10 +114,10 @@
     "    validate_base_url=False,\n",
     "    seed=13,\n",
     "    temperature=0.1,\n",
-    "    streaming=False # Desativei streaming para corresponder ao comportamento de 'invoke'\n",
+    "    streaming=False # desativei streaming para corresponder ao comportamento de 'invoke'\n",
     ")\n",
     "\n",
-    "# Remova ou comente a inicialização do gpt35_chat, pois não foi configurado para Azure\n",
+    "# remover ou comentar a inicialização do gpt35_chat, pois não foi configurado para Azure\n",
     "# gpt35_chat = None"
    ]
   },
@@ -229,7 +229,7 @@
    ],
    "source": [
     "import os, getpass\n",
-    "# Você precisará inserir sua chave do Tavily quando esta célula for executada\n",
+    "# inserir chave do Tavily quando esta célula for executada\n",
     "if not os.environ.get(\"TAVILY_API_KEY\"):\n",
     "    os.environ[\"TAVILY_API_KEY\"] = getpass.getpass(\"TAVILY_API_KEY: \")"
    ]
