--- a/module-1/agent-memory.ipynb
+++ b/module-1/agent-memory.ipynb
@@ -70,7 +70,7 @@
     "os.environ[\"MODEL_DEPLOYMENT\"] = \"gpt-4o\"\n",
     "os.environ[\"MODEL_NAME\"] = \"gpt-4o\"\n",
     "\n",
-    "# Você pode adicionar as variáveis de Embedding/Search aqui também, se precisar delas para módulos futuros\n",
+    "# você pode adicionar as variáveis de Embedding/Search aqui também, se precisar delas para módulos futuros\n",
     "# _set_env(\"EMBEDDING_DEPLOYMENT\")\n",
     "# ..."
    ]
@@ -121,7 +121,7 @@
     "from langchain_openai import AzureChatOpenAI\n",
     "import os\n",
     "\n",
-    "# --- DEFINIÇÃO DAS FERRAMENTAS ---\n",
+    "# definição das tarefas\n",
     "\n",
     "def multiply(a: int, b: int) -> int:\n",
     "    \"\"\"Multiply a and b.\n",
@@ -152,7 +152,7 @@
     "\n",
     "tools = [add, multiply, divide]\n",
     "\n",
-    "# --- INICIALIZAÇÃO DO LLM (Sua Correção do Azure) ---\n",
+    "# inicialização da llm\n",
     "\n",
     "llm = AzureChatOpenAI(\n",
     "    openai_api_version=os.getenv('OPENAI_API_VERSION'),\n",
