--- a/module-1/agent.ipynb
+++ b/module-1/agent.ipynb
@@ -78,14 +78,14 @@
     "    if not os.environ.get(var):\n",
     "        os.environ[var] = getpass.getpass(f\"{var}: \")\n",
     "\n",
-    "# --- Definições do AZURE OpenAI ---\n",
+    "# definições do AZURE OpenAI \n",
     "_set_env(\"OPENAI_API_KEY\") # Chave de API\n",
     "os.environ[\"OPENAI_API_VERSION\"] = \"2024-12-01-preview\"\n",
-    "os.environ[\"ENDPOINT\"] = \"https://cog-open-ai-lab.openai.azure.com/\" # Endereço do Azure\n",
+    "os.environ[\"ENDPOINT\"] = \"https://cog-open-ai-lab.openai.azure.com/\" # endereço do Azure\n",
     "os.environ[\"MODEL_DEPLOYMENT\"] = \"gpt-4o\"\n",
     "os.environ[\"MODEL_NAME\"] = \"gpt-4o\"\n",
     "\n",
-    "# Se você for usar Embeddings e Azure Search em módulos futuros, adicione-as aqui também:\n",
+    "# para usar Embeddings e Azure Search em módulos futuros, adicione-as aqui também:\n",
     "# _set_env(\"EMBEDDING_DEPLOYMENT\")\n",
     "# _set_env(\"EMBEDDING_NAME\")\n",
     "# _set_env(\"AZURE_SEARCH_API_KEY\")\n",
@@ -120,7 +120,7 @@
    "source": [
     "_set_env(\"LANGSMITH_API_KEY\")\n",
     "os.environ[\"LANGSMITH_TRACING\"] = \"true\"\n",
-    "os.environ[\"LANGSMITH_PROJECT\"] = \"langchain-academy\" # Garanta que este seja o nome do seu projeto LangSmith"
+    "os.environ[\"LANGSMITH_PROJECT\"] = \"langchain-academy\" # garantir que este seja o nome do projeto LangSmith"
    ]
   },
   {
@@ -130,11 +130,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_openai import AzureChatOpenAI # IMPORTANTE: Corrigido para AzureChatOpenAI\n",
+    "from langchain_openai import AzureChatOpenAI\n",
     "import os\n",
-    "import getpass # Necessário se você usa _set_env\n",
+    "import getpass # necessário usar _set_env\n",
     "\n",
-    "# --- DEFINIÇÃO DAS FERRAMENTAS ---\n",
+    "# definição de ferramentas\n",
     "\n",
     "def multiply(a: int, b: int) -> int:\n",
     "    \"\"\"Multiply a and b.\n",
@@ -165,7 +165,7 @@
     "\n",
     "tools = [add, multiply, divide]\n",
     "\n",
-    "# --- INICIALIZAÇÃO DO LLM (Sua Correção do Azure) ---\n",
+    "# iniciar llm\n",
     "\n",
     "llm = AzureChatOpenAI(\n",
     "    openai_api_version=os.getenv('OPENAI_API_VERSION'),\n",
@@ -176,7 +176,7 @@
     "    streaming=False\n",
     ")\n",
     "\n",
-    "# Bind das ferramentas ao modelo\n",
+    "# bind das ferramentas ao modelo\n",
     "llm_with_tools = llm.bind_tools(tools, parallel_tool_calls=False)"
    ]
   },
@@ -198,10 +198,10 @@
     "from langgraph.graph import MessagesState\n",
     "from langchain_core.messages import HumanMessage, SystemMessage\n",
     "\n",
-    "# System message\n",
+    "# system message\n",
     "sys_msg = SystemMessage(content=\"You are a helpful assistant tasked with performing arithmetic on a set of inputs.\")\n",
     "\n",
-    "# Node\n",
+    "# node\n",
     "def assistant(state: MessagesState):\n",
     "   return {\"messages\": [llm_with_tools.invoke([sys_msg] + state[\"messages\"])]}"
    ]
