--- a/module-1/chain.ipynb
+++ b/module-1/chain.ipynb
@@ -138,15 +138,15 @@
    "source": [
     "import os, getpass\n",
     "\n",
-    "# Defina todas as variáveis de ambiente necessárias para o Azure OpenAI\n",
-    "# Use getpass para a chave de API e defina as demais diretamente\n",
+    "# definir todas as variáveis de ambiente necessárias para o Azure OpenAI\n",
+    "# use getpass para a chave de API e defina as demais diretamente\n",
     "os.environ[\"OPENAI_API_KEY\"] = getpass.getpass(\"OPENAI_API_KEY: \")\n",
     "os.environ[\"OPENAI_API_VERSION\"] = \"2024-12-01-preview\"\n",
     "os.environ[\"ENDPOINT\"] = \"https://cog-open-ai-lab.openai.azure.com/\"\n",
     "os.environ[\"MODEL_DEPLOYMENT\"] = \"gpt-4o\"\n",
     "os.environ[\"MODEL_NAME\"] = \"gpt-4o\"\n",
     "\n",
-    "# Se precisar da função auxiliar _set_env para a chave Tavily mais tarde (se for usar Tavily)\n",
+    "# função auxiliar _set_env para a chave Tavily mais tarde (se for usar Tavily)\n",
     "def _set_env(var: str):\n",
     "    if not os.environ.get(var):\n",
     "        os.environ[var] = getpass.getpass(f\"{var}: \")"
@@ -183,7 +183,7 @@
     "from langchain_openai import AzureChatOpenAI\n",
     "import os\n",
     "\n",
-    "# Sua configuração completa do AzureChatOpenAI\n",
+    "# configuração completa do AzureChatOpenAI\n",
     "llm = AzureChatOpenAI(\n",
     "    openai_api_version=os.getenv('OPENAI_API_VERSION'),\n",
     "    azure_endpoint=os.getenv('ENDPOINT'),\n",
@@ -192,7 +192,7 @@
     "    validate_base_url=False,\n",
     "    seed=13,\n",
     "    temperature=0.1,\n",
-    "    streaming=False # Mantido como False para 'invoke'\n",
+    "    streaming=False # mantido como False para 'invoke'\n",
     ")\n",
     "\n",
     "result = llm.invoke(messages)\n",
