--- a/module-1/deployment.ipynb
+++ b/module-1/deployment.ipynb
@@ -308,10 +308,10 @@
     "    if not os.environ.get(var):\n",
     "        os.environ[var] = getpass.getpass(f\"{var}: \")\n",
     "\n",
-    "# Defina a chave LangSmith para que o SDK possa se autenticar\n",
+    "# definir chave LangSmith para que o SDK possa se autenticar\n",
     "_set_env(\"LANGSMITH_API_KEY\")\n",
     "\n",
-    "# Se você estiver se conectando ao Studio local, não é estritamente necessário, \n",
+    "# se conectando ao Studio local, não é estritamente necessário, \n",
     "# mas se for usar a implantação na nuvem (Cloud Deployment), é essencial."
    ]
   },
