--- a/module-1/router.ipynb
+++ b/module-1/router.ipynb
@@ -72,24 +72,24 @@
    "source": [
     "import os, getpass\n",
     "\n",
-    "# 1. Variáveis base do Azure OpenAI (LLM)\n",
-    "# A variável OPENAI_API_KEY é usada para a chave de autenticação\n",
+    "# 1. variáveis base do Azure OpenAI (LLM)\n",
+    "# variável OPENAI_API_KEY é usada para a chave de autenticação\n",
     "os.environ[\"OPENAI_API_KEY\"] = getpass.getpass(\"API_KEY (Azure OpenAI): \")\n",
     "os.environ[\"OPENAI_API_VERSION\"] = \"2024-12-01-preview\"\n",
     "os.environ[\"ENDPOINT\"] = \"https://cog-open-ai-lab.openai.azure.com/\"\n",
     "os.environ[\"MODEL_DEPLOYMENT\"] = \"gpt-4o\"\n",
     "os.environ[\"MODEL_NAME\"] = \"gpt-4o\"\n",
     "\n",
-    "# 2. Novas variáveis de Embedding (Para modelos de vetores)\n",
+    "# 2. novas variáveis de Embedding (para modelos de vetores)\n",
     "os.environ[\"EMBEDDING_DEPLOYMENT\"] = \"embedding2\"\n",
     "os.environ[\"EMBEDDING_NAME\"] = \"text-embedding-3-large\"\n",
     "\n",
-    "# 3. Novas variáveis para o Azure AI Search (Para Ferramentas/RAG)\n",
+    "# 3. novas variáveis para o Azure AI Search (Para Ferramentas/RAG)\n",
     "os.environ[\"AZURE_SEARCH_API_KEY\"] = getpass.getpass(\"AZURE_SEARCH_API_KEY: \")\n",
     "os.environ[\"AZURE_SEARCH_ENDPOINT\"] = \"https://srch-open-ai-lab.search.windows.net\"\n",
     "os.environ[\"AZURE_SEARCH_API_VERSION\"] = \"2024-07-01\"\n",
     "\n",
-    "# Mantenha a função auxiliar _set_env caso ela seja usada para o Tavily (em outros notebooks)\n",
+    "# função auxiliar _set_env caso ela seja usada para o Tavily (em outros notebooks)\n",
     "def _set_env(var: str):\n",
     "    if not os.environ.get(var):\n",
     "        os.environ[var] = getpass.getpass(f\"{var}: \")"
@@ -114,7 +114,7 @@
     "    \"\"\"\n",
     "    return a * b\n",
     "\n",
-    "# IMPORTANTE: Use AzureChatOpenAI e as variáveis de ambiente\n",
+    "# use AzureChatOpenAI e as variáveis de ambiente\n",
     "llm = AzureChatOpenAI(\n",
     "    openai_api_version=os.getenv('OPENAI_API_VERSION'),\n",
     "    azure_endpoint=os.getenv('ENDPOINT'),\n",
