--- a/module-3/breakpoints.ipynb
+++ b/module-3/breakpoints.ipynb
@@ -229,8 +229,8 @@
       "Multiply 2 and 3\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "Tool Calls:\n",
-      "  multiply (call_6WifBL2VVn03SSwXLBsrBi19)\n",
-      " Call ID: call_6WifBL2VVn03SSwXLBsrBi19\n",
+      "  multiply (call_GXliNH0zkCz8aOb2Fb7Fhrgi)\n",
+      " Call ID: call_GXliNH0zkCz8aOb2Fb7Fhrgi\n",
       "  Args:\n",
       "    a: 2\n",
       "    b: 3\n"
@@ -312,8 +312,8 @@
      "text": [
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "Tool Calls:\n",
-      "  multiply (call_6WifBL2VVn03SSwXLBsrBi19)\n",
-      " Call ID: call_6WifBL2VVn03SSwXLBsrBi19\n",
+      "  multiply (call_GXliNH0zkCz8aOb2Fb7Fhrgi)\n",
+      " Call ID: call_GXliNH0zkCz8aOb2Fb7Fhrgi\n",
       "  Args:\n",
       "    a: 2\n",
       "    b: 3\n",
@@ -355,8 +355,8 @@
       "Multiply 2 and 3\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "Tool Calls:\n",
-      "  multiply (call_EkY84apcfAvoafMO8qNxGSHu)\n",
-      " Call ID: call_EkY84apcfAvoafMO8qNxGSHu\n",
+      "  multiply (call_Q25BXnJxSSry3dx9nV15Bjld)\n",
+      " Call ID: call_Q25BXnJxSSry3dx9nV15Bjld\n",
       "  Args:\n",
       "    a: 2\n",
       "    b: 3\n"
@@ -366,14 +366,27 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Do you want to call the tool? (yes/no):  y\n"
+      "Do you want to call the tool? (yes/no):  yes\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Operation cancelled by user.\n"
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "Tool Calls:\n",
+      "  multiply (call_Q25BXnJxSSry3dx9nV15Bjld)\n",
+      " Call ID: call_Q25BXnJxSSry3dx9nV15Bjld\n",
+      "  Args:\n",
+      "    a: 2\n",
+      "    b: 3\n",
+      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
+      "Name: multiply\n",
+      "\n",
+      "6\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "The result of multiplying 2 and 3 is 6.\n"
      ]
     }
    ],
@@ -433,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "63c2eaf1-6b8b-4d80-9902-98ae5587bcf9",
    "metadata": {},
    "outputs": [],
@@ -444,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "fb1dd890-c216-4802-9e33-b637e491e144",
    "metadata": {},
    "outputs": [],
@@ -466,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "de9c5017-3a15-46f6-8edf-3997613da323",
    "metadata": {},
    "outputs": [
@@ -477,10 +490,10 @@
       "Receiving new event of type: metadata...\n",
       "--------------------------------------------------\n",
       "Receiving new event of type: values...\n",
-      "{'content': 'Multiply 2 and 3', 'additional_kwargs': {}, 'response_metadata': {}, 'type': 'human', 'name': None, 'id': '94f061d8-b534-4abf-9234-659c6588a8f9'}\n",
+      "{'content': 'Multiply 2 and 3', 'additional_kwargs': {}, 'response_metadata': {}, 'type': 'human', 'name': None, 'id': 'c90326d1-4a56-46b0-ad59-ce39b988fa62'}\n",
       "--------------------------------------------------\n",
       "Receiving new event of type: values...\n",
-      "{'content': '2 multiplied by 3 equals **6**.', 'additional_kwargs': {'refusal': None}, 'response_metadata': {'token_usage': {'completion_tokens': 11, 'prompt_tokens': 13, 'total_tokens': 24, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_provider': 'openai', 'model_name': 'gpt-4o-2024-11-20', 'system_fingerprint': 'fp_b54fe76834', 'id': 'chatcmpl-CaM9UnmGPB1p9KxkgGOB444lmakVV', 'prompt_filter_results': [{'prompt_index': 0, 'content_filter_results': {'hate': {'filtered': False, 'severity': 'safe'}, 'jailbreak': {'filtered': False, 'detected': False}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}}}], 'finish_reason': 'stop', 'logprobs': None, 'content_filter_results': {'hate': {'filtered': False, 'severity': 'safe'}, 'protected_material_code': {'filtered': False, 'detected': False}, 'protected_material_text': {'filtered': False, 'detected': False}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}}}, 'type': 'ai', 'name': None, 'id': 'lc_run--bf0646b4-0766-4bbc-bc5e-611a677ef35e-0', 'tool_calls': [], 'invalid_tool_calls': [], 'usage_metadata': {'input_tokens': 13, 'output_tokens': 11, 'total_tokens': 24, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}}}\n",
+      "{'content': '2 multiplied by 3 equals **6**.', 'additional_kwargs': {'refusal': None}, 'response_metadata': {'token_usage': {'completion_tokens': 11, 'prompt_tokens': 13, 'total_tokens': 24, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_provider': 'openai', 'model_name': 'gpt-4o-2024-11-20', 'system_fingerprint': 'fp_b54fe76834', 'id': 'chatcmpl-CaMV0hpWKXwcJCLy1nKkeQ2LeQgCc', 'prompt_filter_results': [{'prompt_index': 0, 'content_filter_results': {'hate': {'filtered': False, 'severity': 'safe'}, 'jailbreak': {'filtered': False, 'detected': False}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}}}], 'finish_reason': 'stop', 'logprobs': None, 'content_filter_results': {'hate': {'filtered': False, 'severity': 'safe'}, 'protected_material_code': {'filtered': False, 'detected': False}, 'protected_material_text': {'filtered': False, 'detected': False}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}}}, 'type': 'ai', 'name': None, 'id': 'lc_run--5a571660-5ae3-4e2c-ae75-5f735bc6d117-0', 'tool_calls': [], 'invalid_tool_calls': [], 'usage_metadata': {'input_tokens': 13, 'output_tokens': 11, 'total_tokens': 24, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}}}\n",
       "--------------------------------------------------\n"
      ]
     }
@@ -512,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "76284730-9c90-46c4-8295-400a49760b07",
    "metadata": {},
    "outputs": [
@@ -523,7 +536,7 @@
       "Receiving new event of type: metadata...\n",
       "--------------------------------------------------\n",
       "Receiving new event of type: values...\n",
-      "{'content': '2 multiplied by 3 equals **6**.', 'additional_kwargs': {'refusal': None}, 'response_metadata': {'token_usage': {'completion_tokens': 11, 'prompt_tokens': 13, 'total_tokens': 24, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_provider': 'openai', 'model_name': 'gpt-4o-2024-11-20', 'system_fingerprint': 'fp_b54fe76834', 'id': 'chatcmpl-CaM9UnmGPB1p9KxkgGOB444lmakVV', 'prompt_filter_results': [{'prompt_index': 0, 'content_filter_results': {'hate': {'filtered': False, 'severity': 'safe'}, 'jailbreak': {'filtered': False, 'detected': False}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}}}], 'finish_reason': 'stop', 'logprobs': None, 'content_filter_results': {'hate': {'filtered': False, 'severity': 'safe'}, 'protected_material_code': {'filtered': False, 'detected': False}, 'protected_material_text': {'filtered': False, 'detected': False}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}}}, 'type': 'ai', 'name': None, 'id': 'lc_run--bf0646b4-0766-4bbc-bc5e-611a677ef35e-0', 'tool_calls': [], 'invalid_tool_calls': [], 'usage_metadata': {'input_tokens': 13, 'output_tokens': 11, 'total_tokens': 24, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}}}\n",
+      "{'content': '2 multiplied by 3 equals **6**.', 'additional_kwargs': {'refusal': None}, 'response_metadata': {'token_usage': {'completion_tokens': 11, 'prompt_tokens': 13, 'total_tokens': 24, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_provider': 'openai', 'model_name': 'gpt-4o-2024-11-20', 'system_fingerprint': 'fp_b54fe76834', 'id': 'chatcmpl-CaMV0hpWKXwcJCLy1nKkeQ2LeQgCc', 'prompt_filter_results': [{'prompt_index': 0, 'content_filter_results': {'hate': {'filtered': False, 'severity': 'safe'}, 'jailbreak': {'filtered': False, 'detected': False}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}}}], 'finish_reason': 'stop', 'logprobs': None, 'content_filter_results': {'hate': {'filtered': False, 'severity': 'safe'}, 'protected_material_code': {'filtered': False, 'detected': False}, 'protected_material_text': {'filtered': False, 'detected': False}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}}}, 'type': 'ai', 'name': None, 'id': 'lc_run--5a571660-5ae3-4e2c-ae75-5f735bc6d117-0', 'tool_calls': [], 'invalid_tool_calls': [], 'usage_metadata': {'input_tokens': 13, 'output_tokens': 11, 'total_tokens': 24, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}}}\n",
       "--------------------------------------------------\n"
      ]
     }
