--- a/module-4/parallelization.ipynb
+++ b/module-4/parallelization.ipynb
@@ -56,7 +56,16 @@
    "execution_count": 2,
    "id": "31bbec0d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "OPENAI_API_KEY:  ········\n",
+      "LANGSMITH_API_KEY:  ········\n"
+     ]
+    }
+   ],
    "source": [
     "import os, getpass\n",
     "\n",
@@ -64,7 +73,15 @@
     "    if not os.environ.get(var):\n",
     "        os.environ[var] = getpass.getpass(f\"{var}: \")\n",
     "\n",
-    "_set_env(\"OPENAI_API_KEY\")"
+    "_set_env(\"OPENAI_API_KEY\")\n",
+    "os.environ[\"OPENAI_API_VERSION\"] = \"2024-12-01-preview\"\n",
+    "os.environ[\"ENDPOINT\"] = \"https://cog-open-ai-lab.openai.azure.com/\"\n",
+    "os.environ[\"MODEL_DEPLOYMENT\"] = \"gpt-4o\"\n",
+    "os.environ[\"MODEL_NAME\"] = \"gpt-4o\"\n",
+    "\n",
+    "_set_env(\"LANGSMITH_API_KEY\")\n",
+    "os.environ[\"LANGSMITH_TRACING\"] = \"true\"\n",
+    "os.environ[\"LANGSMITH_PROJECT\"] = \"langchain-academy\""
    ]
   },
   {
@@ -241,7 +258,7 @@
       "Adding I'm B to [\"I'm A\"]\n",
       "Adding I'm C to [\"I'm A\"]\n",
       "An error occurred: At key 'state': Can receive only one value per step. Use an Annotated key to handle multiple values.\n",
-      "For troubleshooting, visit: https://python.langchain.com/docs/troubleshooting/errors/INVALID_CONCURRENT_GRAPH_UPDATE\n"
+      "For troubleshooting, visit: https://docs.langchain.com/oss/python/langgraph/errors/INVALID_CONCURRENT_GRAPH_UPDATE\n"
      ]
     }
    ],
@@ -322,8 +339,8 @@
      "output_type": "stream",
      "text": [
       "Adding I'm A to []\n",
-      "Adding I'm C to [\"I'm A\"]\n",
       "Adding I'm B to [\"I'm A\"]\n",
+      "Adding I'm C to [\"I'm A\"]\n",
       "Adding I'm D to [\"I'm A\", \"I'm B\", \"I'm C\"]\n"
      ]
     },
@@ -578,8 +595,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_openai import ChatOpenAI\n",
-    "llm = ChatOpenAI(model=\"gpt-4o\", temperature=0) "
+    "from langchain_openai import AzureChatOpenAI\n",
+    "import os\n",
+    "llm = AzureChatOpenAI(\n",
+    "    openai_api_version=os.getenv('OPENAI_API_VERSION'),\n",
+    "    azure_endpoint=os.getenv('ENDPOINT'),\n",
+    "    azure_deployment=os.getenv('MODEL_DEPLOYMENT'),\n",
+    "    model=os.getenv('MODEL_NAME'),\n",
+    "    temperature=0\n",
+    ")"
    ]
   },
   {
@@ -608,7 +632,15 @@
    "execution_count": 15,
    "id": "c8bb519a-d08a-4ec7-8f0b-2ce6a9bf7342",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "TAVILY_API_KEY:  ········\n"
+     ]
+    }
+   ],
    "source": [
     "import os, getpass\n",
     "def _set_env(var: str):\n",
@@ -724,7 +756,7 @@
     {
      "data": {
       "text/plain": [
-       "\"Nvidia's Q2 2025 earnings were strong, as the company reported an earnings per share (EPS) of $1.04, beating the forecast of $1.01, resulting in a 2.97% surprise. Revenue also exceeded expectations, with the company reporting $46.74 billion in revenue and adjusted earnings per share of $1.05, both surpassing analyst estimates. This performance drove a stock uptick, indicating positive market reception. However, there were concerns about the company's operations in China, which remains a question mark.\""
+       "'The most recent album by Deftones is \"Private Music,\" released on August 22, 2025.'"
       ]
      },
      "execution_count": 17,
@@ -733,7 +765,7 @@
     }
    ],
    "source": [
-    "result = graph.invoke({\"question\": \"How were Nvidia's Q2 2025 earnings\"})\n",
+    "result = graph.invoke({\"question\": \"What is the most recent album by Deftones\"})\n",
     "result['answer'].content"
    ]
   },
@@ -796,13 +828,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nvidia's Q2 2025 earnings were strong, with the company reporting an earnings per share (EPS) of $1.04, beating the forecast of $1.01. Revenue also exceeded expectations, coming in at $46.7 billion, surpassing the previous quarter's record of $44.1 billion and besting economist forecasts of $46.05 billion. This resulted in a positive surprise and drove a stock uptick.\n"
+      "The most recent album by Deftones is \"Private Music,\" released on August 22, 2025.\n"
      ]
     }
    ],
    "source": [
     "thread = await client.threads.create()\n",
-    "input_question = {\"question\": \"How were Nvidia Q2 2025 earnings?\"}\n",
+    "input_question = {\"question\": \"What is the most recent album by Deftones\"}\n",
     "async for event in client.runs.stream(thread[\"thread_id\"], \n",
     "                                      assistant_id=\"parallelization\", \n",
     "                                      input=input_question, \n",
@@ -825,9 +857,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
